--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page title</title>
-    <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
+
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Example title</h1>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+
+    <input class="userInput" type="text" placeholder="Enter name of country">
+
+    <ul class="countries-cards"></ul>
+
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
