--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <body>
 
     <input class="userInput" type="text" placeholder="Enter name of country">
+git remote remove origin
 
     <ul class="countries-cards"></ul>
 
